[metadata]
name = volbatch

url = https://github.com/GBERESEARCH/volbatch

author = GBERESEARCH
author_email = gberesearch@gmail.com
version = attr: volbatch.__version__

description = Generate volatility surface data from option prices and output the results in JSON format.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir=
    =src
packages=find:

install_requires = 
    numpy>=2.2.3
    pandas>=2.2.3
    requests>=2.32.3
    volvisdata>=1.0.9
    voldiscount>=0.0.2

[options.packages.find]
where=src